charts/infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
  namespace: envoy-gateway-system
  annotations:
    external-dns.alpha.kubernetes.io/target: 66.130.187.229
spec:
  gatewayClassName: envoy
  addresses:
  - type: IPAddress
    value: 192.168.0.241
  infrastructure:
    labels:
      gateway: envoy
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All

  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
        - name: homelab-cert
        - name: saima-cert
          namespace: envoy-gateway-system
    allowedRoutes:
      namespaces:
        from: All
